[tool.poetry]
name = "bdchm"
version = "0.1.0"
description = "This is the project description."
authors = ["Brian Furner <bfurner@uchicago.edu>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/bdchm/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = "^1.3.5"
schemasheets = "^0.1.14"
mkdocs = "^1.4.2"
mkdocs-material = "^9.5.17"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]