[project]
name = "bdchm"
description = "BiomeData Catalog Harmonized Model (BDCHM) LinkML schema."
readme = "README.md"
authors = [
    {name = "Brian Furner", email = "bfurner@uchicago.edu"},
]
license = "MIT"
requires-python = ">=3.10,<3.14"
dynamic = ["version"]

dependencies = [
    "linkml-runtime>=1.11.0",
]

[dependency-groups]
dev = [
    "linkml>=1.11.0",
    "schemasheets>=0.1.14",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.5.17",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "pytest>=8",
    "pyyaml>=6",
    "ruff>=0.11",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 120
target-version = "py310"
# Lint first-party code (tests/, src/bdchm/). The pre-existing
# resources/ tree, generated artifacts, and non-code src subtrees
# (schema data, docs, templates) are intentionally out of scope.
extend-exclude = [
    "docs/",
    "project/",
    "generated/",
    "generate-diagrams/",
    "resources/",
    "src/data/",
    "src/docs/",
    "src/doc-templates/",
]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["bdchm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# See https://hatch.pypa.io/latest/config/build/#file-selection
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdchm"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"
